layout bug fixed

--- a/src/pages/scss/serciveCard.scss
+++ b/src/pages/scss/serciveCard.scss
@@ -26,7 +26,7 @@ $contactImageSize: 30px;
     color: $textAbout;
     min-width: 150px;
     min-height: 30px;
-    max-height: 300px;
+    max-height: 400px;
     h3{
       font-size: 17px;
     }
